--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/Alexrpoma/NodeJS-core/issues"
   },
-  "homepage": "https://github.com/Alexrpoma/NodeJS-core#readme"
+  "homepage": "https://github.com/Alexrpoma/NodeJS-core#readme",
+  "dependencies": {
+    "picocolors": "1.0.0"
+  }
 }
